apps/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/name: freshrss
  name: freshrss
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: freshrss
      app.kubernetes.io/name: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: freshrss
        app.kubernetes.io/name: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /i/
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /i/
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /i/
              port: http
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 15m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: smb-freshrss-claim
