apps/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/name: freshrss
  name: freshrss
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/name: freshrss
  type: ClusterIP
